# autocaster

./: .gitignore  Makefile  README.md  autocaster_macro.py  autohunt_macro.py  autoseller_macro.py  pyproject.toml  requirements.txt  spellcast_macro.py
core/: __init__.py  __main__.py
core/cli/: commands.py
core/entities/: flow.py  macro.py
core/processor/: flow_creator.py  task_runner.py
core/reader/: json_reader.py
legacy/: autocaster_macro.py  autotrainer_macro.py
